Change the logo

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <img
         id="logo"
         alt="Jovian Logo"
-        src="https://imgur.com/m1wXjqw"
+        src="https://imgur.com/WUtsRM9"
         height="30px"
       />
     </div>
