delete image of logo

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,7 @@
 
   <body>
     <div id="navbar">
-      <img
-        id="logo"
-        alt="Jovian Logo"
-        src="https://imgur.com/WUtsRM9"
-        height="30px"
-      />
+     <p>Jovian</p>
     </div>
     <img id="banner" src="banner.jpg" alt="Banner" height="240" />
     <h1>About Jovian</h1>
