--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My first Web Page</title>
+    <title>Jovian Careers</title>
+    <link rel="icon" href="/jovian_favicon.png" type="image/x-icon">
     <link rel="preconnect" href="htpps://fonts.googleapis.com" />
     <link rel="preconnect" href="htpps://fonts.gstatic.com" crossorigin />
     <link
